<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="47dp"
                android:fontFamily="@font/quicksand_semibold"
                android:text="@string/titulo_status"
                android:textColor="@color/darkest_gray"
                android:textSize="18dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="8dp"
                tools:layout_marginRight="15dp">

                <EditText
                    android:id="@+id/statusText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/text_input"
                    android:ems="10"
                    android:hint="@string/input_status"
                    android:inputType="textPersonName"
                    android:paddingTop="40dp"
                    android:paddingBottom="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fotoStatus" />

                <Button
                    android:id="@+id/publicarBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="52dp"
                    android:background="@drawable/button"
                    android:text="@string/publicar_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_ciudades" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/subtitulo_status"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/fotoStatus"
                    android:layout_width="0dp"
                    android:layout_height="336dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.47"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:srcCompat="@drawable/standar_img" />

                <ImageButton
                    android:id="@+id/camBtn"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="14dp"
                    android:background="@drawable/button"
                    android:contentDescription="@string/app_name"
                    android:cropToPadding="false"
                    app:layout_constraintBottom_toBottomOf="@+id/galBtn"
                    app:layout_constraintEnd_toStartOf="@+id/galBtn"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/camera" />

                <ImageButton
                    android:id="@+id/galBtn"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button"
                    android:contentDescription="gallery_button"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/gallery" />

                <Spinner
                    android:id="@+id/spinner_ciudades"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/text_input"
                    app:layout_constraintBottom_toTopOf="@+id/publicarBtn"
                    app:layout_constraintEnd_toEndOf="@+id/statusText"
                    app:layout_constraintStart_toStartOf="@+id/statusText"
                    app:layout_constraintTop_toBottomOf="@+id/statusText" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>